sumo/tests/dfrouter/errors/detector_files/broken_detectors_file2b/errors.dfrouter
Error: The input ended before all started tags were ended. Last tag started was 'a'
 In file 'input_messstrecke.det.xml'
 At line/column 8/1.

Quitting (on error).
